--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js" defer></script>
-  <!--<link rel="canonical" href="https://6ammart-web.6amtech.com/" />-->
+  <!--<link rel="canonical" href="https://fullcareu.com/" />-->
 
   <script>
     // The value below is injected by flutter build, do not touch.
